New package index page (and release notes and licensing guidelines).
svn changeset:7884 branch:6.0

--- a/WebContent/license/licensing-guidelines.html
+++ b/WebContent/license/licensing-guidelines.html
@@ -10,18 +10,14 @@
 	</head>
 	<body>
 	
-<div id="container">
-		<div id="header-links">
-			  <a href="http://vaadin.com" title="Open vaadin.com">vaadin.com &gt;</a>
-		</div>
-		<div class="header">
-			<h1>@version@</h1>
-			
-		</div> <!-- /Header -->
-		
-		<div class="content">
-			
-			<div>
+<div id="header">
+			<h1>Vaadin &ndash; thinking of U and I</h1>
+			<div id="version">
+				<a href="../index.html" title="Back to index page">Back</a>
+			</div>
+		</div> <!-- /header -->
+
+<div id="content">
 				
 			<h1>Licensing Summary</h1>
 
@@ -272,15 +268,13 @@ available from other locations.
   Source code availability: http://hsqldb.org/
   Used only in IT Mill Toolkit demos.
 </pre>
-			</div> <!-- /getting-started -->
-			
-			<div class="clearer"></div>
+
 		</div> <!-- /content-->
 
 	
-	</div> <!-- /container -->
-	<div class="footer">
-			<a href="http://www.itmill.com">IT Mill Ltd.<br/>Interfacing IT</a>
-	</div> <!-- /footer -->
+		<div id="footer">
+			<span class="slogan">Vaadin &ndash; thinking of U and I<span>
+		</div> <!-- /footer -->
+		
 	</body>
 </html>
