#2967 licensing guidelines: initial changes due to product renaming, needs more work
svn changeset:7886 branch:6.0

--- a/WebContent/license/licensing-guidelines.html
+++ b/WebContent/license/licensing-guidelines.html
@@ -21,7 +21,7 @@
 				
 			<h1>Licensing Summary</h1>
 
-<p>IT Mill Toolkit is available for use under two licensing options:</p>
+<p>Vaadin is available for use under two licensing options:</p>
 
 <ul>
 	<li><a href="#opensource">Open Source licensing</a> with
@@ -32,13 +32,13 @@
 	<li>Commercial license can be purchased
 	from IT Mill Ltd. It is designed to suit commercial use of the library
 	and includes support, guarantee as well as additional tools that
-	accelerate software development with IT Mill Toolkit</li>
+	accelerate software development with Vaadin</li>
 </ul>
 
 <p>Please read carefully about the licensing options and
 evaluate the suitability of the actual license files before use. If you
 have any questions about licensing options, please contact sales at <a
-	href="http://www.itmill.com/"> IT Mill Ltd</a>.</p>
+	href="http://www.vaadin.com/"> IT Mill Ltd</a>.</p>
 
 <p>The following tools and services are not provided with Open
 Source license</p>
@@ -59,17 +59,17 @@ Source license</p>
 
 <h1><a name="opensource" />Open Source License</a></h1>
 <pre>
-		IT MILL TOOLKIT LICENSE INFORMATION
+		VAADIN LICENSE INFORMATION
 		
 December 4th, 2007
 
 
-The IT Mill Toolkit software and sample code developed by IT Mill is 
+The Vaadin software and sample code developed by IT Mill Ltd. is 
 licensed under the Apache License, v. 2.0. Other software included in this 
 distribution is provided under other licenses, as listed in the Included 
 Software and Licenses section at the bottom of this page. Source code for 
-software included in this distribution is available from the IT Mill 
-Toolkit project or as otherwise indicated at the bottom of this page.  
+software included in this distribution is available from the Vaadin
+project or as otherwise indicated at the bottom of this page.  
 
 =====
 
@@ -239,7 +239,7 @@ reason of your accepting any such warranty or additional liability.
 
 LICENSE INFORMATION REGARDING BUNDLED THIRD-PARTY SOFTWARE
 
-The following third party software is distributed with IT Mill Toolkit
+The following third party software is distributed with Vaadin
 and is provided under other licenses and/or has source 
 available from other locations.
 
@@ -260,13 +260,13 @@ available from other locations.
 * Jetty
   License: Apache License v. 2.0 (above)
   Source code availability: http://jetty.mortbay.org
-  Used only in IT Mill Toolkit demos.
+  Used only in Vaadin demos.
   
 * HSQLDB Database Engine
   License: See License folder within this package or
     http://hsqldb.org/web/hsqlLicense.html
   Source code availability: http://hsqldb.org/
-  Used only in IT Mill Toolkit demos.
+  Used only in Vaadin demos.
 </pre>
 
 		</div> <!-- /content-->
