Changed subheader message slightly, removed "Look out below!" as per Skype discussion
svn changeset:7889 branch:6.0

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,7 +20,7 @@
 		</div> <!-- /header -->
 	
 		<div id="subheader">
-			<strong>Great, you’ve made it this far with Vaadin. Now let’s get started for real. Look out below!</strong>
+			<strong>Great, you’ve made it this far with Vaadin. Now let’s get started for real!</strong>
 			<div class="links">
               <a href="http://vaadin.com/forum" title="Open vaadin.com/forum">vaadin.com/forum</a>
 			  <a href="http://dev.vaadin.com" title="Open dev.vaadin.com">dev.vaadin.com</a>
