--- a/WebContent/license/licensing-guidelines.html
+++ b/WebContent/license/licensing-guidelines.html
@@ -57,7 +57,7 @@ Source license</p>
 </ul>
 
 
-<h1><a name="opensource" />Open Source License</a></h1>
+<h1><a name="opensource">Open Source License</a></h1>
 <pre>
 		VAADIN LICENSE INFORMATION
 		
