Include build date in Release Notes. Fixes #2963.
svn changeset:7996 branch:6.0

--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -19,6 +19,8 @@
 
 <div id="content">
 
+<p>Version @version@ built on @builddate@.</p>
+
 <h2>Release Notes for Vaadin @version@</h2>
 
 <p>Vaadin @version@ is the first release of Vaadin, the next generation of the framework
