Fixed #2967 - Outdated licensing-guidelines
svn changeset:8048 branch:6.0

--- a/WebContent/license/licensing-guidelines.html
+++ b/WebContent/license/licensing-guidelines.html
@@ -21,41 +21,24 @@
 				
 			<h1>Licensing Summary</h1>
 
-<p>Vaadin is available for use under two licensing options:</p>
+<p><strong><i>Vaadin Framework</i> is intended to be freely
+used and extended by anyone without any fees</strong>. In order to guarantee
+these freedoms, <i>Vaadin Framework</i> is licensed under the Apache
+License, Version 2.0.</p>
 
-<ul>
-	<li><a href="#opensource">Open Source licensing</a> with
-	permissive Apache 2.0 license. This option includes the core library
-	and is fully functional. Open Source licensing option does not include
-	any support, guarantees or all commercially available tools and
-	features.</li>
-	<li>Commercial license can be purchased
-	from IT Mill Ltd. It is designed to suit commercial use of the library
-	and includes support, guarantee as well as additional tools that
-	accelerate software development with Vaadin</li>
-</ul>
+<p>Copyright to <i>Vaadin Framework</i> is owned by <a href="http://itmill.com/">IT Mill</a>.</p>
 
-<p>Please read carefully about the licensing options and
-evaluate the suitability of the actual license files before use. If you
-have any questions about licensing options, please contact sales at <a
-	href="http://www.vaadin.com/"> IT Mill Ltd</a>.</p>
 
-<p>The following tools and services are not provided with Open
-Source license</p>
-<ul>
-	<li><b>IT Mill Toolkit Testing Tools</b>: Demo version of Testing
-	Tools may be included in this distribution package for evaluation purposes.
-	Continuous or production use of this demo package is forbidden without
-	commercial license.</li>
-	<li><b>Support services</b>: No support is provided, but use of
-	discussion forums is encouraged.</li>
-	<li><b>Guarantee</b>: Open Source version is provided without
-	guarantee. Please report any issues, we try to fix them in upcoming
-	product releases.</li>
-	<li><b>IPR protection</b>: No IPR protection is provided other
-	than stated in the Apache 2.0 license.</li>
-</ul>
+			<h1>Commercial Vaadin Products and Services</h1>
 
+<p><a href="http://itmill.com/">IT Mill</a> markets and sells <a
+	href="http://vaadin.com/pro">commercial products and services</a> that complement the
+free <i>Vaadin Framework</i>. Trademarks for "Vaadin" and "<strong>}></strong>"
+are owned by <a href="http://itmill.com/">IT Mill</a>. You may not
+market your products using Vaadin -brand name without written permission
+from <a href="http://itmill.com/">IT Mill</a>.</p>
+
+<p>If you have any questions on licensing terms, please <a href="http://vaadin.com/sales">contact us</a>.</p>
 
 <h1><a name="opensource">Open Source License</a></h1>
 <pre>
