Reindeer style name reference example added to web.xml and index.html.
svn changeset:8062 branch:6.0

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -47,6 +47,7 @@
 				<ul><li><a class="demoapp" href="Reservr">Reservr &ndash; reservation application</a> &nbsp; (<a href="docs/example-source/com/vaadin/demo/reservation">sources</a>)</li>
 					<li><a class="demoapp" href="VaadinTunesLayout/">VaadinTunes &ndash; advanced layout &amp; theme</a> &nbsp; (<a href="docs/example-source/com/vaadin/demo/VaadinTunesLayout.java.html">sources</a>)</li>
 					<li><a class="demoapp" href="Coverflow/">Coverflow &ndash; Flex integration</a> &nbsp; (<a href="docs/example-source/com/vaadin/demo/coverflow">sources</a>)</li>
+					<li><a class="demoapp" href="ReindeerTheme">Reindeer theme &ndash; see available styles</a></li>
 				</ul>
 				<h3>Code Examples</h3>
 				<ul>
