--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,38 +27,45 @@
 	</head>
 	<body>
 	
-		<div id="header">
-			<h1>Vaadin &ndash; thinking of U and I</h1>
-			<div id="version">
+		<div id="header" align="center">
+			<div id="header-contentcolumn" align="left">
+			<h1><!-- Vaadin &ndash; thinking of U and I--></h1>
+			<div id="version" align="right">
 				<strong>Version @version@</strong>
 				<a href="release-notes.html" class="release-notes" title="Read the release notes for this Vaadin version">Release Notes</a>
 				<span class="version-check">(<a href="http://www.itmill.com/downloads/itmill-toolkit.htm?checkVersion" title="Check if you have the latest Vaadin version (requires Internet connection)">check for latest version</a>)</span>
 			</div>
+			</div>
 		</div> <!-- /header -->
 	
-		<div id="subheader">
-			<strong>Great, you’ve made it this far with Vaadin. Now let’s get started for real!</strong>
-			<div class="links">
-              <a href="http://vaadin.com/forum" title="Open vaadin.com/forum">vaadin.com/forum</a>
-			  <a href="http://dev.vaadin.com" title="Open dev.vaadin.com">dev.vaadin.com</a>
-			  <a href="http://www.vaadin.com" title="Open www.vaadin.com">www.vaadin.com</a>
-            </div>
+		<div id="subheader" align="center">
+			<div class="contentcolumn" align="left">
+				<strong>Great, you’ve made it this far with Vaadin. Now let’s get started for real!</strong>
+				<div class="links" align="right">
+	              <a href="http://vaadin.com/forum" title="Open vaadin.com/forum">vaadin.com/forum</a>
+				  <a href="http://dev.vaadin.com" title="Open dev.vaadin.com">dev.vaadin.com</a>
+				  <a href="http://www.vaadin.com" title="Open www.vaadin.com">www.vaadin.com</a>
+	            </div>
+			</div>
 		</div> <!-- /subheader -->
 		
-		<div id="upfront">
-			<div id="sampler">
-				<h2>Vaadin Sampler</h2>
-				<p>Sampler contains examples of most features, as well as combination examples and useful UI patterns that you can use simply by copy-pasting the code.</p>
+		<div id="upfront" align="center">
+			<div class="contentcolumn">
+				<div id="sampler">
+					<h2>Vaadin Sampler</h2>
+					<p>Sampler contains examples of most features, as well as combination examples and useful UI patterns that you can use simply by copy-pasting the code.</p>
 				<p><a href="sampler/" class="demoapp">Start Sampler &raquo;</a>
-			</div>
-			<div id="eclipse">
-				<h2>Vaadin Eclipse Plugin</h2>
-				<p>The easiest way to start working with Vaadin is to use Eclipse IDE and download the Vaadin Eclipse plugin from our website.</p>
-				<p><a href="http://www.vaadin.com/eclipse">How to install the Vaadin Eclipse Plugin &raquo;</a>
+				</div>
+				<div id="eclipse">
+					<h2>Vaadin Eclipse Plugin</h2>
+					<p>The easiest way to start working with Vaadin is to use Eclipse IDE and download the Vaadin Eclipse plugin from our website.</p>
+					<p><a href="http://www.vaadin.com/eclipse">How to install the Vaadin Eclipse Plugin &raquo;</a>
+				</div>
 			</div>
 		</div> <!-- /upfront -->
 		
-		<div id="content">
+		<div id="content" align="center">
+			<div class="contentcolumn">
 			<div id="demos">	
 				<h3>Additional demos</h3>
 				<ul><li><a class="demoapp" href="Reservr">Reservr &ndash; reservation application</a> &nbsp; (<a href="docs/example-source/com/vaadin/demo/reservation">sources</a>)</li>
@@ -89,9 +96,11 @@
 					<li><a href="http://www.vaadin.com/forum">Forum &raquo;</a></li>
 				</ul>
 			</div> <!--  /docs -->
+			</div> <!-- /contentcolumn -->
 		</div> <!-- /content -->
 		
-		<div id="footer">
+		<div id="footer" align="center">
+			<div class="contentcolumn">
 			<div id="open-source">
 				<h4>Open Source Development and Licenses</h4>
 				<p>Vaadin is developed as an Open Source software and its core is licensed under
@@ -106,6 +115,7 @@
 				<p>The commercial products complement Vaadin and make it possible for you to get better results quicker &ndash; both from a development perspective as well as from a business perspective.</p>
 				<p>We are also glad to help you hands on or even do the work for you &ndash; which ever you prefer.</p>
 				<p>Read more about the <a href="http://www.vaadin.com/services/">Services</a> or the <a href="http://www.vaadin.com/support/">Support</a> alternatives.</p>
+			</div>
 			</div>
 		</div> <!-- /footer -->
 	
