Fixes #3119: Release notes back link should not link to index.html
svn changeset:8325 branch:6.0

--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -13,7 +13,7 @@
 		<div id="header">
 			<h1>Vaadin &ndash; thinking of U and I</h1>
 			<div id="version">
-				<a href="index.html" title="Back to index page">Back</a>
+				<a href="javascript:history.go(-1);" title="Back to index page">Back</a>
 			</div>
 		</div> <!-- /header -->
 
